[gd_scene load_steps=10 format=3 uid="uid://cwkpc4mqo2hbf"]

[ext_resource type="Script" path="res://test/ui/status.gd" id="1_qog5n"]
[ext_resource type="Texture2D" uid="uid://chya68bjv4rvt" path="res://test/asset/ui/血条底.png" id="2_j1ik3"]
[ext_resource type="Texture2D" uid="uid://bkwgmtcet1i2y" path="res://test/asset/ui/血条.png" id="3_rjlgw"]
[ext_resource type="Texture2D" uid="uid://bfqyjiaxh3s5g" path="res://test/asset/ui/精力条底.png" id="4_hrdfy"]
[ext_resource type="Texture2D" uid="uid://dmhymfbpva646" path="res://test/asset/ui/精力条.png" id="5_hxflh"]
[ext_resource type="Texture2D" uid="uid://dcfdn4ianfsvk" path="res://test/asset/ui/金钱栏.png" id="6_mpmw7"]
[ext_resource type="PackedScene" uid="uid://c76fcecjkprlx" path="res://test/ui/WorldTime.tscn" id="7_o2iu0"]

[sub_resource type="LabelSettings" id="LabelSettings_o2wtf"]
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_42c66"]
font_size = 13

[node name="status" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qog5n")

[node name="diana" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.0295139
anchor_top = 0.0328125
anchor_right = 0.204861
anchor_bottom = 0.0875
metadata/_edit_group_ = true
metadata/_edit_use_anchors_ = true

[node name="hp_progress" type="TextureProgressBar" parent="diana"]
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0
max_value = 1000.0
value = 500.0
texture_under = ExtResource("2_j1ik3")
texture_progress = ExtResource("3_rjlgw")
texture_progress_offset = Vector2(14, 4)
radial_center_offset = Vector2(10.05, 2.08165e-12)

[node name="mp_progress" type="TextureProgressBar" parent="diana"]
layout_mode = 0
offset_top = 17.0
offset_right = 640.0
offset_bottom = 377.0
max_value = 270.0
value = 100.0
texture_under = ExtResource("4_hrdfy")
texture_progress = ExtResource("5_hxflh")
texture_progress_offset = Vector2(14, 4)

[node name="max_hp" type="Label" parent="diana"]
layout_mode = 0
offset_left = 62.0
offset_top = 2.0
offset_right = 89.0
offset_bottom = 18.0
text = "/ 100"
label_settings = SubResource("LabelSettings_o2wtf")

[node name="hp" type="Label" parent="diana"]
layout_mode = 0
offset_left = 42.0
offset_top = 2.0
offset_right = 69.0
offset_bottom = 18.0
text = "100"
label_settings = SubResource("LabelSettings_o2wtf")

[node name="max_mp" type="Label" parent="diana"]
layout_mode = 0
offset_left = 62.0
offset_top = 19.0
offset_right = 89.0
offset_bottom = 35.0
text = "/ 100"
label_settings = SubResource("LabelSettings_o2wtf")

[node name="mp" type="Label" parent="diana"]
layout_mode = 0
offset_left = 42.0
offset_top = 19.0
offset_right = 69.0
offset_bottom = 35.0
text = "100"
label_settings = SubResource("LabelSettings_o2wtf")

[node name="traveler" type="Control" parent="."]
anchors_preset = 0
anchor_left = 0.0295139
anchor_top = 0.0328125
anchor_right = 0.204861
anchor_bottom = 0.0875
metadata/_edit_group_ = true
metadata/_edit_use_anchors_ = true

[node name="hp_progress" type="TextureProgressBar" parent="traveler"]
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0
max_value = 1000.0
value = 500.0
texture_under = ExtResource("2_j1ik3")
texture_progress = ExtResource("3_rjlgw")
texture_progress_offset = Vector2(14, 4)
radial_center_offset = Vector2(10.05, 2.08165e-12)

[node name="mp_progress" type="TextureProgressBar" parent="traveler"]
layout_mode = 0
offset_top = 17.0
offset_right = 640.0
offset_bottom = 377.0
max_value = 270.0
value = 100.0
texture_under = ExtResource("4_hrdfy")
texture_progress = ExtResource("5_hxflh")
texture_progress_offset = Vector2(14, 4)

[node name="max_hp" type="Label" parent="traveler"]
layout_mode = 0
offset_left = 62.0
offset_top = 2.0
offset_right = 89.0
offset_bottom = 18.0
text = "/ 100"
label_settings = SubResource("LabelSettings_o2wtf")

[node name="hp" type="Label" parent="traveler"]
layout_mode = 0
offset_left = 42.0
offset_top = 2.0
offset_right = 69.0
offset_bottom = 18.0
text = "100"
label_settings = SubResource("LabelSettings_o2wtf")

[node name="max_mp" type="Label" parent="traveler"]
layout_mode = 0
offset_left = 62.0
offset_top = 19.0
offset_right = 89.0
offset_bottom = 35.0
text = "/ 100"
label_settings = SubResource("LabelSettings_o2wtf")

[node name="mp" type="Label" parent="traveler"]
layout_mode = 0
offset_left = 42.0
offset_top = 19.0
offset_right = 69.0
offset_bottom = 35.0
text = "100"
label_settings = SubResource("LabelSettings_o2wtf")

[node name="money" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.819444
anchor_top = 0.123438
anchor_right = 0.961806
anchor_bottom = 0.157813
offset_left = 1.52588e-05
offset_right = -1.52588e-05
grow_horizontal = 0
texture = ExtResource("6_mpmw7")
expand_mode = 3
metadata/_edit_use_anchors_ = true

[node name="num" type="Label" parent="money"]
layout_mode = 0
offset_left = 19.0
offset_top = 2.0
offset_right = 77.0
offset_bottom = 23.0
text = "10"
label_settings = SubResource("LabelSettings_42c66")
horizontal_alignment = 1

[node name="WorldTime" parent="." instance=ExtResource("7_o2iu0")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.819444
anchor_top = 0.0265625
anchor_right = 0.819444
anchor_bottom = 0.0265625
offset_left = 1.52588e-05
offset_right = 1.52588e-05
metadata/_edit_use_anchors_ = true
